[package]
name = "burncloud-database-models"
version = "0.1.0"
edition = "2021"
description = "Models table database operations for BurnCloud model management system"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Local dependencies
burncloud-database = { path = "../burncloud-database" }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[features]
default = ["sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
all = ["postgres", "mysql", "sqlite"]