[package]
name = "burncloud-database-models"
version = "0.1.0"
edition = "2021"

[dependencies]
burncloud-database = { path = "../burncloud-database" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }